--- a/LBproject/templates/leaderboardpage.html
+++ b/LBproject/templates/leaderboardpage.html
@@ -15,7 +15,7 @@
         <h1 class="title text-center">LeaderBoard</h1>
             <div class="table">
                 <div class="table-header">
-                    <div class="header__item"><a id="name" class="filter__link">Team Number</a></div>
+                    <div class="header__item"><a id="name" class="filter__link">Number</a></div>
                     <div class="header__item"><a id="wins" class="filter__link">Name</a></div>
                     <div class="header__item"><a id="draws" class="filter__link">Points</a></div>
                     <div class="header__item"><a id="losses" class="filter__link">Credits</a></div>
