--- a/LBproject/static/css/DBstyles.css
+++ b/LBproject/static/css/DBstyles.css
@@ -21,52 +21,43 @@
 
 .table {
 	width:100%;
-	border:1px solid 
 }
 
 .table-header {
 	display:flex;
 	width:100%;
-	background:#ff7200;
-    font-family:cursive;
-    font-size: 35px;
-    color:#fff;
+	background:#ff7300da;
+    font-weight: bolder;
     
 }
 
 .table-row {
 	display:flex;
 	width:100%;
-    font-family:cursive;
-    font-size: 35px;
-    color:#fff;
 }
 
-.table-data, .header__item {
+.table-data{
 	flex: 1 1 20%;
 	text-align:center;
     font-family:cursive;
-    font-size: 35px;
+    font-size: 200%;
     color:#fff
 }
 
 .header__item {
 	text-transform:uppercase;
-    font-family:cursive;
-    font-size: px;
-    color:#fff;
+    flex: 1 1 20%;
+	text-align:center;
 }
 
 
 .filter__link {
-	color:rgb(0, 0, 0);
 	text-decoration: none;
-    font-family: 'Lucida Sans';
-    font-size:x-large;
+    font-family: cursive;
 	position:relative;
 	display:inline-block;
-    font-size: 30px;
-    color:#fff;
+    font-size: 180%;
+    color:rgb(0, 0, 0);
 }
 
 
