--- a/LBproject/static/css/DBstyles.css
+++ b/LBproject/static/css/DBstyles.css
@@ -5,22 +5,22 @@
 
 .main{
     width: 100%;
-    background-color: #222;
+    background-image: url("../images/BG2.jpg");
     background-position: center;
     background-size: cover;
-    height:max-content;
+    height: 100%;
 }
 
 .insertmain{
     width: 100%;
-    background-color: #222;
+    background-image: url("../images/BG.png");
     background-position: center;
     background-size: cover;
     height:100vh;
 }
 
 .table {
-	width:100%;
+	width: 110%;
 }
 
 .table-header {
@@ -40,7 +40,7 @@
 	flex: 1 1 20%;
 	text-align:center;
     font-family:cursive;
-    font-size: 200%;
+    font-size: 220%;
     color:#fff
 }
 
@@ -59,15 +59,6 @@
     font-size: 180%;
     color:rgb(0, 0, 0);
 }
-
-
-
-.menu{
-    width: 400px;
-    float: left;
-    height: 70px;
-}
-
 
 .btn{
     width: 100px;
@@ -89,66 +80,6 @@
     outline: none;
 }
 
-.content{
-    width: 1200px;
-    height: auto;
-    margin: auto;
-    color:#fff;
-    position: relative;
-}
-.par{
-    height: auto;
-    margin: auto;
-    color:#fff;
-    position: relative;
-    font-family: Arial;
-    font-size: 125%;
-    letter-spacing: 1.2px;
-    line-height: 30px;
-}
-.content h1{
-    font-family: 'Arial';
-    font-size: 50px;
-    padding-left: 20px;
-    margin-top: 9%;
-    letter-spacing: 2px;
-    color:#ff7200;
-}
-.content .cn{
-    width: 160px;
-    height: 40px;
-    background: #ff7200;
-    border: none;
-    margin-bottom: 10px;
-    margin-left: 20px;
-    font-size: 18px;
-    border-radius: 10px;
-    cursor: pointer;
-    transition: .4s ease;
-    
-}
-.content .cn a{
-    text-decoration: none;
-    color: #000;
-    transition: .3s ease;
-}
-.cn:hover{
-    background-color: #fff;
-}
-
-.content span{
-    color: #ff7200;
-    font-size: 65px
-}
-
-.succesmsg{
-    color: #fff;
-    font-family: "Arial";
-}
-
-.form-divider{
-    position: relative;
-}
 
 .form-input{
     padding: 10px;
@@ -156,20 +87,6 @@
     border-radius: 10px;
     text-indent: 15%;
 }
-
-.form-input-select{
-    padding: 10px;
-    width: 20%;
-    border-radius: 10px;
-    text-indent: 15%;
-}
-.form-input-select2{
-    padding: 10px;
-    width: 60%;
-    border-radius: 10px;
-    text-indent: 15%;
-}
-
 
 .form-input:hover, .form-input:focus{
     border: solid 2px var(--blue-color);
@@ -183,25 +100,6 @@
     font-family: Arial;
 }
 
-.liw{
-    padding-top: 15px;
-    padding-bottom: 10px;
-    text-align: center;
-}
-.icons a{
-    text-decoration: none;
-    color: #fff;
-}
-.icons ion-icon{
-    color: #fff;
-    font-size: 30px;
-    padding-left: 14px;
-    padding-top: 5px;
-    transition: 0.3s ease;
-}
-.icons ion-icon:hover{
-    color: #ff7200;
-}
 .center{
     position: absolute;
     left: 50%;
@@ -223,6 +121,15 @@
       min-width: 320px;
       padding: 5%;
 }
+
+.cardLB{
+    border-radius: 10px;
+    font-size:large;
+    box-shadow: 0 0 20px 8px rgba(0,0,0,0.1);
+    width: 75%;
+    min-width: 320px;
+    padding: 5%;
+}
   
 .title{
     font-size: 200%;
@@ -237,41 +144,9 @@
 
 @media screen and (max-width:1200px) {
     /*Normal Screen*/
-
-    .navbar{
-        width: 100%;
-        height: 100px;
-    }
-    ul{
-        margin-left: 30px;
-    }   
-    ul li{
-        margin-left: 60px;
-    }
-    .navbutton{
-       font-size: 1.6vw; 
-    }
     .btn{
         height:40px;
         width: 80px;
-    }
-    .content{
-        width: 100%;
-    }
-    .content h1, .content span{
-        font-size: 4.5vw; 
-    }
-    .content .par{
-        width: 90%;
-        font-size: 1.5vw;
-    }
-    .content .cn{
-        width: 13%;
-        height: 3.5vw;
-        font-size: 1.8vw;
-    }
-    .content a{
-        font-size: 1.6vw
     }
 }
 
@@ -280,52 +155,11 @@
     .main{
         padding-left: 20px;
         height: 180vh;
-    }
-    
+    } 
 }
 
 @media screen and (max-width: 830px){
     /*For tablet*/
-   
-    .content{
-        margin-top: 120px;
-        width: 80%;   
-        margin-left: 40px;  
-    }
-    .content h1, .content span{
-        font-size: 6vw; 
-    }
-    .content .par{
-        width: 90%;
-        font-size: 1.8vw;
-    }
-    .content .cn{
-        width: 15%;
-        height: 4.5vw;
-        font-size: 2vw;
-    }
-    .content a{
-        font-size: 2vw
-    }
-    .logo{
-        margin-left: 240px;
-        width: 100%;
-        margin-top: 15px;
-        font-size: 5vw;
-    }
-    .menu{
-        width: 100%;
-    }
-    ul{
-        margin-top: -5px;
-        margin-left: 5px;
-    }
-    ul li{
-        margin-left: 60px;
-    }
-    .navbutton{
-       font-size: 2vw; 
-    }
     .btn{
         height:30px;
         width: 70px;
@@ -338,110 +172,8 @@
 
 @media screen and (max-width: 600px){
     /*IPAD*/
-    
-    .content{
-        margin-top: 80px;
-        margin-left: 20px;
-    }
-    .logo{
-        margin-left: 180px;
-        font-size: 4vw;
-    }
-    ul{
-        margin-top: -25px;
-        margin-left: -5px;
-    }
-    ul li {
-        margin-left: 50px;
-    }
-    .navbutton{
-        font-size: 2vw;
-    }   
 }
 
 @media screen and (max-width: 450px){
-    /*mobile*/
-    .logo{
-        margin-left: 140px;
-        font-size: 4vw;
-    }
-    ul{
-        margin-top: -25px;
-        justify-content: left;
-    }
-    ul li {
-        margin-left: 42px;
-        justify-content: left;
-    }
-    .navbutton{
-        font-size: 2vw;
-    }  
+    /*mobile*/ 
 }
-
-
-
-
-
-
-
-
-
-.container{
-    margin: auto;
-    width: 500px;
-    max-width: 90%;
-}
-
-.container form{
-    width: 100%;
-    height: 100%;
-    padding: 20px;
-    background: transparent;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-}
-            
-             .container form .form-control{
-                width: 100%;
-                height: 30px;
-                background: whitesmoke;
-                border-radius: 6px;
-                border: 1ps solid silver;
-                margin: 10px 0 10px 0;
-                padding: 0 10px;
-                
-             }
-             .container form .form1-control{
-                color:#222;
-                padding: 10px;
-                width: 100%;
-                border-radius: 10px;
-                text-indent: 15%;
-                /*width: 90%;*/
-             }
-
-             .container form .form2-control{
-                
-                background: whitesmoke;
-                border-radius: 6px;
-                border: 1ps solid silver;
-                margin: 10px 0 18px 0;
-                padding: 0 10px;
-                box-shadow: 0 8px 16px rgba(0,0,0,.3);
-                color:#222;
-             }
-             .abc{
-                font-family:"Arial";
-                padding: 0 10px;
-                color: #fff;
-                margin: 10px 0 5px 0;
-             }
-             
-            .select{
-                padding: 2px 6px;
-                background: whitesmoke;
-                color:#222;
-                border-radius: 4px;
-                border: 1ps solid silver;
-                cursor: pointer;
-                position: relative;
-             }
