--- a/LBproject/templates/leaderboardpage.html
+++ b/LBproject/templates/leaderboardpage.html
@@ -11,8 +11,9 @@
     <div class="main">
     {% block content %}
     <center>
-    <div class="card spacer">
+    <div class="cardLB spacer">
         <h1 class="title text-center">LeaderBoard</h1>
+            <center>
             <div class="table">
                 <div class="table-header">
                     <div class="header__item"><a id="name" class="filter__link">Number</a></div>
@@ -32,7 +33,8 @@
                 {% endfor %}
                 </div>
 
-            </table>
+            </div>
+        </center>
             
         </div>
     </div>
